2011-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix various typos and grammaros
	* NEWS: Fix typos.
	* tests/py-compile-basic.test: Likewise.
	* tests/py-compile-basedir.test: Fix botched wording in comments.
	* tests/py-compile-option-terminate.test: Fix typo and incomplete
	comment.
	Suggestions by Peter Rosin.

2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test interactions of `nobase_' and `nodist_'
	* tests/nobase-nodist.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: fix various blunders in test 'java-mix.test'
	* tests/java-mix.test: Add missing call to `set -e'.  Fix inverted
	semantics (`.java' files are expected *not* to be distributed by
	default, not the other way round).  Fix various typos in the name
	of the `.java' files.  Correct other minor blunders.  Improve some
	comments.

2011-04-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: allow both JAVA and nobase_JAVA in the same Makefile.am
	* automake.in (handle_java): Also strip `nobase_' from the given
	prefix, when needed.
	* tests/java-clean.test: Update and extend.
	* tests/java-compile-install.test: Likewise.
	* tests/java-no-duplicate.test: Likewise.
	* tests/java-sources.test: Likewise.
	* tests/java-noinst.test: Likewise.
	* tests/java-mix-dist-nodist.test: Renamed to ...
	* tests/java-mix.test: ... this, and extended.
	* tests/java-nobase.test: New test, still xfailing due to
	unrelated issues.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

2011-04-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: allow both dist_JAVA and nodist_JAVA in the same Makefile.am
	Fixes automake bug#8434.
	* automake.in (handle_java): Strip `dist_' and `nodist_' from
	the given prefix.  Define a new internal Makefile variable
	`am__java_sources'.  Related adjustments.
	* lib/am/java.am (JAVAC, JAVAROOT, CLASSPATH_ENV): Define only the