@@ -5104,11 +5104,11 @@ sub handle_java
 {
     my @sourcelist = &am_install_var ('-candist',
 				      'java', 'JAVA',
-				      'java', 'noinst', 'check');
+				      'noinst', 'check');
     return if ! @sourcelist;
 
     my @prefixes = am_primary_prefixes ('JAVA', 1,
-				      'java', 'noinst', 'check');
+				        'noinst', 'check');
 
     my $dir;
     my @java_sources = ();
