@@ -1,3 +1,14 @@
+2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	java: complain if java_JAVA is used but $(javadir) is undefined
+	Fixes automake bug#8461.
+	* automake.in (handle_java): Remove inappropriate "java" argument
+	from the calls to `&am_install_var' and `&am_primary_prefixes'.
+	* tests/instdir-java.test (Makefile.am): Define `$(javadir)'.
+	* tests/javadir-undefined.test: New test.
+	* tests/Makefile.am (TESTS): Add it.
+	* NEWS: Update.
+
 2011-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	cosmetics: fix various typos and grammaros
